# hypocalculator

./: .gitignore  CMakeLists.txt  README.md  hypocalculator.cpp  hypocalculator.h  main.cpp  triangledata.cpp  triangledata.h
testdata/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt
unittest/: CMakeLists.txt  testcalculator.cpp  testmain.cpp
